--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,14 @@ nav {
   top: 0;
   background-color: gray;
 }
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  min-index: 160px;
+}
+
+#account-button:hover .dropdown-content {
+  display: block;
+}
