--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,14 @@ nav {
   background-color: gray;
 }
 
+/********************* dropdowns *********************/
+
+/* contains a dropdown */
 .dropdown {
-  
+  display: inline;
 }
 
+/* contains the content of a dropdown. Place inside a .dropdown */
 .dropdown-content {
   display: none;
   position: absolute;
@@ -20,8 +24,28 @@ nav {
 }
 
 .dropdown:hover .dropdown-content {
-  display: block;
+  display: unset;
 }
+
+/********************* tabs *********************/
+
+/* contains a bunch of tabs and their content */
+.tab-area {
+
+}
+
+/* contains the content for one tab */
+.tab-content {
+  display: none;
+  animation: fadeEffect 0.2s;
+}
+
+@keyframes fadeEffect {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+/********************* product grid *********************/
 
 .grid {
   display: grid;
