--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ h1 {
   text-decoration: underline;
 }
 
-nav {
+header {
   position: sticky;
   top: 0;
   background-color: gray;
@@ -13,6 +13,11 @@ nav {
 /* contains a dropdown */
 .dropdown {
   display: inline;
+}
+
+/* the button that displays the dropdown content when clicked */
+.dropdown-button {
+
 }
 
 /* contains the content of a dropdown. Place inside a .dropdown */
@@ -29,9 +34,13 @@ nav {
   display: block;
 }
 
+.dropdown:has(.last-clicked) .dropdown-content {
+  display: block;
+}
+
 /********************* tabs *********************/
 
-/* contains a bunch of tabs and their content */
+/* contains a bunch of tabs and their contents */
 .tab-area {
 
 }
