--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ header {
   top: 0;
   background-color: gray;
   z-index: 1;
+  height: 25px; 
+  padding-top: 3px; 
 }
 
 /********************* dropdowns *********************/
