--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@ header {
   z-index: 1;
 }
 
+input {
+  margin-top: 3px;
+}
+
 /********************* dropdowns *********************/
 
 /* contains a dropdown */
@@ -74,6 +78,9 @@ header {
   transition: opacity 0.7s ease, transform 0.7s ease;
   text-align: center;
   transform: translateY(0);
+  display: flex;
+  flex-direction: column;
+  min-height: 395px;
 }
 .product-card.hidden {
   opacity: 0;
@@ -202,8 +209,8 @@ header {
 .quantity-container input {
   width: 60px;
   padding: 5px;
-  font-size: 1rem;
   border-radius: 4px;
+  font-size: 1rem;
   border: 1px solid #ccc;
 }
 
@@ -217,6 +224,10 @@ header {
   border-radius: 8px;
   font-size: 1rem;
   width: 100%;
+}
+
+.product-card .add-cart-btn {
+  margin-top: auto;
 }
 
 .add-cart-btn:hover {
