Added login/register user error messages, condensed model into Model.js

--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,13 @@ input {
   background-color: black;
 }
 
+/********************* reusable styles *********************/
+
+.error-message {
+  color: red;
+  font-size: 0.75rem;
+}
+
 /********************* PRODUCT GRID *********************/
 
 .grid {
